--- a/task/task.org
+++ b/task/task.org
@@ -556,3 +556,60 @@
 **** WEEKEND
 *** 11
 **** WEEKEND
+*** 12
+**** HOLIDAY
+*** 13
+**** Events 
+***** .5 hour billable.  Responded to emails to events-dev.
+**** OCM
+***** .5 hour non-billable.  Created new account on HSNGDB1 for Sarah to access using Crystal Reports.
+**** HealthyUNH
+***** 5 hour billable.  Continued working on project.
+*** 14
+**** UAC
+***** .5 hour billable.  Minor adjustment to UACC website.
+**** EOS 
+***** .5 hour billable.  Reviewed log to determine cause of failure to send emails to some people.
+**** HealthyUNH
+***** 5 hour billable.  Continued working on project.
+*** 15
+**** Housing
+***** 2 hour billable.  Worked on access UNH IT database over VPN.
+**** Bugzilla
+***** 3 hours non-billable.  Installed bugzilla on new server.
+**** Events
+***** .5 hour billable.  Responded to emails to events-dev.
+**** Admissions
+***** .5 hour billable.  Responded to request via email.
+*** 16
+**** Admissions
+***** 1 hour billable.   Reviewed Admissions Online recordset which has SSN.  Spoke with Jennifer Blosser about this.
+**** HealthyUNH
+***** 5 hour billable.  Tested site in an iPad.  Minor adjustments to websites based on testing.
+*** 17
+**** WEEKEND
+*** 18 
+**** WEEKEND
+*** 19
+**** HealthyUNH
+***** 6 hour billable.  Cleaned up import data.  Added ability to "page" through multiple feature pop-ups.  Added display of all feature pop-ups at a given location.
+*** 20
+**** HealthyUNH
+***** 3.5 hour billable.  Cleaned up import data.  Added ability to "page" through multiple feature pop-ups.  Added display of all feature pop-ups at a given location.
+**** OCM
+***** 2 hours non-billable.  Meeting with Sarah to review a few outstanding bugs and review hearing decision templates.
+**** Admissions
+***** .5 hour billable.  Wiped data in admissions database containing SSNs.
+*** 21
+**** OCM
+***** 4 hours non-billable.  Fixed bug in creation of PDF for read-only incidents.  Fixed bug with incident clone feature.  Worked on fixing bugs when adding sanctions to hearing decision (with templates).  Fixed bugs with recordsets for move-out dates and alt. sanction program.  Fixed access checks for move-out dates and alt. sanction program.  Added field to complainant sanction recordset.
+**** Admissions
+***** .5 hour billable.  Meet with Bob and Patrick to discuss wiping of backups contains SSNs.
+*** 22
+**** HOLIDAY
+*** 23
+**** HOLIDAY
+*** 24
+**** WEEKEND
+*** 25
+**** WEEKEND
