--- a/task/task.org
+++ b/task/task.org
@@ -15,9 +15,10 @@
 # Redmine: 57720
 # ResLife: 57996
 # SpiceCore: 59919
-# Staff Meetings: 53145
+# StaffMeetings: 53145
 # UACC: 60035
 # ePIP: 59333
+# SELF: 00000
 * 2012
 ** July
 *** 01
@@ -653,7 +654,7 @@
 **** OCM
 ***** 3 hours non-billable.  Worked to debug a problem when using ckeditor within the hearing decision wizard.
 *** 29
-**** Staff Meetings 
+**** StaffMeetings 
 ***** 2 hours non-billable.  Quarterly All Staff Meeting.
 **** OCM
 ***** 3 hours non-billable.  Fixed bug between jWizard and ckeditor.  Wrote and sent update to Sarah.  Wrote email containing description new billable work.
@@ -711,4 +712,38 @@
 **** HCGS
 ***** 3 hours billable.  Responded to an email from Feseha Abebe-Akele.  Updated LoginOrRegister page.  Added content to People pages for Kelly and Moris from hcgs.unh.edu.
 **** HealthyUNH
-***** 3 hours non-billable.  Responded to an email from Stacy.  Corrected bug in menu's display of minus/plus images when opening and closing sub-menus.  Researched using alternate map layers and using feature collections.
+***** 2 hours billable.  Responded to an email from Stacy.  Researched using alternate map layers and using feature collections.
+***** .5 hour non-billable.  Corrected bug in menu's display of minus/plus images when opening and closing sub-menus.
+*** 12
+*** 13
+**** StaffMeetings
+***** 1 hour non-billable.   Farewell lunch for bja.
+**** RCC 
+***** 1 hour non-billable.  Meeting with aew, bja and myself to review/discuss Bill's projects.
+*** 14
+**** StaffMeetings
+***** 3.5 hour non-billable.  Research Office division-wide meeting.
+**** OCM
+***** 1 hour non-billable.  Corrected bug in Conduct Dashboard after pushing updates.
+**** HealthyUNH
+***** .25 hours non-billable.  Responded to an email from Stacy.
+*** 15
+**** WEEKEND
+*** 16
+**** WEEKEND
+*** 17
+**** NHIHPP
+***** 1 hour non-billable.  Meet with aew to discuss the status of the system resource (cpu, memory and hard drive) project.  We researched using disk quota to provide disk usage information.
+***** .25 hour billable.  Worked with tjb to setup/enable disk quota functionality on twilight.  At this point, we're waiting on a reboot schedule for Thursday to complete the setup process.
+***** 2.75 hour billable.  Updated cpu-usage script to work with Oracle.
+***** 1 hour non-billable.  Corrected issue with scripts and the version of python on twilight.
+**** SELF
+***** 1 hour billable.  OWED TO RCC.
+*** 18
+**** ResLife
+***** .25 hour non-billable.  Enabled sending of emails.  Changed Class and RA AppFiles Report to display all records by default.
+**** Housing
+***** 1.75 hours non-billable.  Meeting with Blaise, Allan and myself to review remaining work.
+***** 2 hours billable.  Updated recordset to include timestamp column and user-selectable filter.  Worked to determine to if v_picked_rooms is correct.
+**** HealthyUNH
+***** 2 hours billable.  Updated style of feature on map.  Spent time determing the best colors to use best on customer's request.
