--- a/task/task.org
+++ b/task/task.org
@@ -570,7 +570,7 @@
 ***** .5 hour billable.  Responded to emails to events-dev.
 *** 08
 **** HealthyUNH
-***** 3 hours billable.  Completed working on project.
+***** 3 hours billable.  Continued working on project.
 **** OCM
 ***** 2.5 hours billable.  Created links (on conduct dashboard) and recordsets for MoveOut Dates and Alt. Sanction Programs.
 ***** .5 hours non-billable.  Tested additional LDAP access.
@@ -702,43 +702,56 @@
 ***** .5 hour non-billable.   Corrected problem with student not being able to accept RA position offer.  
 ***** 2.5 hours non-billable.  Corrected several bugs: ResLife wasn't detecting applications previous years (in this case three years) for some students and it wasn't offering to create Returning RA Applications.  When migrating an application from New RA Application to Returning RA Application, ResLife was incorrectly setting the appfile type to 'NEW_RA'.  It should be 'Returning RA'.  This bug has been fixed.    Also, after saving the returning RA application form the student was shown a blank page -- this bug has been fixed.  The student is now shown the just saved application.
 *** 7
-**** VACATION 0 hours billable.  1 day
-*** 8
+**** VACATION
+*** 8 
 **** WEEKEND
 *** 9
 **** WEEKEND
 *** 10
-*** 11
-**** HCGS
-***** 3 hours billable.  Responded to an email from Feseha Abebe-Akele.  Updated LoginOrRegister page.  Added content to People pages for Kelly and Moris from hcgs.unh.edu.
 **** HealthyUNH
-***** 2 hours billable.  Responded to an email from Stacy.  Researched using alternate map layers and using feature collections.
+***** 2.5 hours billable.  Responded to an email from Stacy.  Researched using alternate map layers and using feature collections.
+**** HCGS
+***** 2.5 hours billable.  Responded to an email from Feseha Abebe-Akele.  Updated LoginOrRegister page.  Added content to People pages for Kelly and Moris from hcgs.unh.edu.
+*** 11
+**** OCM
+***** 1 hour billable.  Updated complaint violations to include additional columns.
+**** HealthyUNH
 ***** .5 hour non-billable.  Corrected bug in menu's display of minus/plus images when opening and closing sub-menus.
 *** 12
+**** OCM
+***** 1 hour billable.  Deployed to the live site the Alternative Sanction Program and Move-Out Date extensions updates.
+**** HealthyUNH
+***** 1 hour billable.  Sent/Received emails to Campus Planning asking if it possible for them to plan an alternate base layer.  It is this point its not possible but it will be in the future.
+***** 3 hours billable.  Continued working on using alternate map base layers.
+**** NHIHPP
+***** 1.5 billable.  Continued working on cpubyuser/cpubyuser reporting tools.
 *** 13
 **** StaffMeetings
-***** 1 hour non-billable.   Farewell lunch for bja.
+***** 1.5 hour non-billable.   Farewell lunch for bja.
 **** RCC 
 ***** 1 hour non-billable.  Meeting with aew, bja and myself to review/discuss Bill's projects.
+**** HealthyUNH
+***** 2 hours billable.  Updated look/style of site based on feedback from Stacey.
+**** OCM
+***** 1.5 hour billable.  Removed duplicate columns in Complaint Sanctions which aren't filterable.  Added additional columns.
 *** 14
 **** StaffMeetings
-***** 3.5 hour non-billable.  Research Office division-wide meeting.
+***** 4 hour non-billable.  Research Office division-wide meeting.
 **** OCM
-***** 1 hour non-billable.  Corrected bug in Conduct Dashboard after pushing updates.
+***** .5 hour non-billable.  Corrected bug in Conduct Dashboard after pushing updates.
 **** HealthyUNH
-***** .25 hours non-billable.  Responded to an email from Stacy.
+***** .5 hours non-billable.  Responded to an email from Stacy.
+***** 1 hours billable.  Finished updating style.  Updated preview site and sent email to Stacey.
 *** 15
 **** WEEKEND
 *** 16
 **** WEEKEND
 *** 17
 **** NHIHPP
-***** 1 hour non-billable.  Meet with aew to discuss the status of the system resource (cpu, memory and hard drive) project.  We researched using disk quota to provide disk usage information.
-***** .25 hour billable.  Worked with tjb to setup/enable disk quota functionality on twilight.  At this point, we're waiting on a reboot schedule for Thursday to complete the setup process.
-***** 2.75 hour billable.  Updated cpu-usage script to work with Oracle.
+***** 1 hour non-billable.  Meet with aew to discuss the status of the system resources (cpu, memory and hard drive) project.  We researched using disk quota to provide disk usage information.
+***** .5 hour billable.  Worked with tjb to setup/enable disk quota functionality on twilight.  At this point, we're waiting on a reboot schedule for Thursday to complete the setup process.
+***** 3.5 hour billable.  Updated cpu-usage script to work with Oracle.
 ***** 1 hour non-billable.  Corrected issue with scripts and the version of python on twilight.
-**** SELF
-***** 1 hour billable.  OWED TO RCC.
 *** 18
 **** ResLife
 ***** .25 hour non-billable.  Enabled sending of emails.  Changed Class and RA AppFiles Report to display all records by default.
@@ -746,7 +759,38 @@
 ***** 1.75 hours non-billable.  Meeting with Blaise, Allan and myself to review remaining work.
 ***** 2 hours billable.  Updated recordset to include timestamp column and user-selectable filter.  Worked to determine to if v_picked_rooms is correct.
 **** HealthyUNH
-***** 2 hours billable.  Updated style of feature on map.  Spent time determing the best colors to use best on customer's request.
+***** 2 hours billable.  Updated style of feature on map.  Spent time determing the best colors to use based on customer's request.
+*** 19
+**** OCM
+***** 4 hours billable.  Worked on OCM Summary.
+**** HCGS
+***** 2 hours billable.  Responded to an email from Feseha Abebe-Akele.  Updated LoginOrRegister page.  Added content to People pages for Kelly and Moris from hcgs.unh.edu.
+*** 20
+**** OCM
+***** 5 hours billable.  Worked on OCM Summary.
+***** 1 hour non-billable. Updated file notes to replace \x0A (newline) in off-campus address with new-lines.
+*** 21
+**** VACATION 0 hours billable.  1 day
+*** 22 
+**** WEEKEND
+*** 23
+**** WEEKEND
+*** 24
+**** HOLIDAY
+*** 25
+**** HOLIDAY
+*** 26
+**** HOLIDAY
+*** 27
+**** VACATION 0 hours billable.  1 day
+*** 28
+**** VACATION 0 hours billable.  1 day
+*** 29
+**** WEEKEND
+*** 30
+**** WEEKEND
+*** 31
+**** VACATION 0 hours billable.  1 day
 * 2013
 ** January
 *** 01
